--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Content Manager</title>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
@@ -13,21 +16,49 @@
       CMS.registerPreviewStyle(
         "https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap"
       );
-      CMS.registerPreviewStyle("/styles/content.module.css");
+      CMS.registerPreviewStyle(
+        "/styles/content.module.css"
+      );
       var PostPreview = createClass({
         render: function () {
           var entry = this.props.entry;
-          var date = entry.getIn(["data", "date"]);
+          var date = entry.getIn([
+            "data",
+            "date",
+          ]);
           return h(
             "div",
             { className: "content" },
-            h("h1", {}, entry.getIn(["data", "title"])),
-            h("time", {}, entry.getIn(["data", "date"])),
-            h("div", {}, this.props.widgetFor("body"))
+            h(
+              "h1",
+              {},
+              entry.getIn([
+                "data",
+                "title",
+              ])
+            ),
+            h(
+              "time",
+              {},
+              entry.getIn([
+                "data",
+                "date",
+              ])
+            ),
+            h(
+              "div",
+              {},
+              this.props.widgetFor(
+                "body"
+              )
+            )
           );
         },
       });
-      CMS.registerPreviewTemplate("posts", PostPreview);
+      CMS.registerPreviewTemplate(
+        "posts",
+        PostPreview
+      );
     </script>
   </body>
 </html>
